# ncoda_util

./: .gitattributes  .gitignore  .pylintrc  README.md  environment_dev.yml  get_test_data.sh  pyproject.toml
src/ncoda_util/: reader.py
tests/manual/: plot_data.py
